--- a/style.css
+++ b/style.css
@@ -11,6 +11,13 @@ body{
     border-bottom: 1px solid rgb(51, 51, 51);
 }
 
+.rnr{
+    color: WHITE;
+    font-family: 'Alfa Slab One', cursive;
+    padding: 30px 0 20px 0;
+    font-size: 50px;
+}
+
 .logo{
     height: 40px;
     padding-right: 10px;
@@ -40,7 +47,7 @@ body{
     font-weight: Bold;
     margin: auto;
     font-size: 12px;
-    margin:0 10px 0 10px;
+    margin:0 5px 0 5px;
     
 }
 
@@ -61,9 +68,14 @@ body{
 
 /* section-carousel */
 
-.carousel-item{
-    height: 700px;
+#my-carousel{
 }
+
+.item{
+size: 100%;
+height: 600px;
+}
+
 
 /* section-content */
 #content{
@@ -176,4 +188,36 @@ body{
 .footer-text{
     font-size: 11px;
     color: white;
+    
+}
+
+@media (max-width: 900px){
+
+.rnr{
+    padding: 30px 100px 20px;
+}
+
+.navbar-toggler{
+    margin-right: 1000px; 
+}
+
+
+
+.highlights{
+    font-size: 40px;
+}
+
+.content1{
+ font-size: 40px;
+}
+
+.content2{
+    font-size: 40px;
+}
+
+.content3{
+    font-size: 40px;
+}
+
+
 }
